# hermes-code-action

./: .gitignore  README.md  action.yml  pyproject.toml
docs/: PLAN.md
examples/: automation.yml  hermes.yml
scripts/: run_tests.sh
src/hermes_code_action/: __init__.py  branch.py  comments.py  config.py  github_api.py  github_context.py  hermes_runner.py  main.py  orchestrator.py  plan.py  policy.py  prompt.py  security.py  session_renamer.py  session_titles.py  tracking.py  triggers.py  util.py
tests/: test_branch.py  test_comments.py  test_hermes_runner.py  test_main.py  test_orchestrator.py  test_plan.py  test_policy.py  test_prompt.py  test_security.py  test_tracking.py  test_triggers.py
